--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
-  "name": "kusuma-ai",
+  "dependencies": {
+    "axios": "^1.11.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2"
+  },
+  "name": "project",
   "version": "1.0.0",
-  "description": "Kusuma AI - Chatbot dengan Express + ngrok",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "keywords": [
-    "chatbot",
-    "express",
-    "ai",
-    "termux",
-    "ngrok"
-  ],
-  "author": "Wijaya",
-  "license": "MIT",
-  "dependencies": {
-    "axios": "^1.6.8",
-    "express": "^4.19.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
